Animations do not restart after exiting page cache https://bugs.webkit.org/show_bug.cgi?id=116900

Reviewed by Tim Horton.

Source/WebCore:

Animations are suspended as they enter the page cache, but
were not getting correctly resumed when exiting. The cause
was an error in r149576 which was checking a global flag for suspension
on the AnimationController and thus not trying to resume anything.

Test: animations/resume-after-page-cache.html

* page/animation/AnimationController.cpp:
(WebCore::AnimationControllerPrivate::suspendAnimationsForDocument):
(WebCore::AnimationControllerPrivate::resumeAnimationsForDocument):

LayoutTests:

New test to make sure an animation will resume if it
enters and leaves the page cache.

* animations/resources/page-cache-helper.html: Added.
* animations/resume-after-page-cache-expected.txt: Added.
* animations/resume-after-page-cache.html: Added.

Canonical link: https://commits.webkit.org/135201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150862 268f45cc-cd09-0410-ab3c-d52691b4dbfc